Adding more tests