@@ -23,36 +23,20 @@ lazy val root = (project in file("."))
       // ScalaTest for unit tests
       "org.scalatest" %% "scalatest" % "3.2.19" % "test",
       "org.scalatestplus" %% "mockito-5-12" % "3.2.19.0" % "test"),
+    dockerEnvVars += "JDK_JAVA_OPTIONS" ->
+      ("--add-opens=java.base/java.io=ALL-UNNAMED " +
+        "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED " +
+        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"),
+    dockerEnvVars += "HADOOP_HOME" -> "/usr/local/hadoop",
     dependencyOverrides ++= Seq(
       // Overrides because of security vulnerabilities
-      // Jackson (multiple CVEs: CVE-2022-42003, CVE-2022-42004, etc.)
-//      "com.fasterxml.jackson.core" % "jackson-databind" % "2.15.2",
-//      "com.fasterxml.jackson.core" % "jackson-core" % "2.15.2",
-//      "com.fasterxml.jackson.core" % "jackson-annotations" % "2.15.2",
-      // hadoop-client-runtime-3.3.4 was pulling in a lot of old dependencies (hadoop-client-runtime is pulled by spark)
-      "org.apache.hadoop" % "hadoop-client-runtime" % "3.4.1" exclude ("org.apache.avro", "avro"),
-
+      "org.apache.hadoop" % "hadoop-client-runtime" % "3.4.1",
       // Protobuf (CVE-2021-22569, CVE-2022-3509, CVE-2024-7254, etc.)
-      "com.google.protobuf" % "protobuf-java" % "3.25.5"
+      // "com.google.protobuf" % "protobuf-java" % "3.25.5",
 
-      // Nimbus JOSE+JWT (CVE-2023-52428)
-//      "com.nimbusds" % "nimbus-jose-jwt" % "9.37.2",
-//
-//      // Commons IO (CVE-2024-47554)
-//      "commons-io" % "commons-io" % "2.18.0",
-//
-//      // dnsjava (CVE-2024-25638)
-//      "dnsjava" % "dnsjava" % "3.6.3",
-//
-//      // Netty (CVE-2025-24970)
-//      "io.netty" % "netty-handler" % "4.1.118.Final",
-//
-//      // json-smart (CVE-2021-31684, CVE-2023-1370)
-//      "net.minidev" % "json-smart" % "2.5.2",
-//
-//      // Apache Avro (CVE-2024-47561, CVE-2023-39410)
-//      "org.apache.avro" % "avro" % "1.12.0",
-//
-//      // Apache Ivy (CVE-2022-46751)
-//      "org.apache.ivy" % "ivy" % "2.5.3"
+      "org.apache.avro" % "avro" % "1.11.4",
+
+      "io.netty" % "netty-handler" % "4.1.118.Final",
+
+      "org.apache.ivy" % "ivy" % "2.5.2",
     ))
